cabal-version: 3.6
name: cesk-labo
version: 0.1.0.0
homepage: https://github/lachrist/cesk-labo
license: MIT
license-file: LICENSE
author: Laurent Christophe
maintainer: laurent.christophe.terken@gmail.com
build-type: Simple
library
  hs-source-dirs: src
  ghc-options: -Wall
  other-modules:
    Continuation,
    Data,
    Environment,
    Error,
    Expression,
    Format,
    Interprete,
    Parse,
    Primitive,
    State,
    Store,
    System,
    Weave,
  build-depends:
    base >= 4 && < 5,
    parsec,
    containers,
executable cesk-labo
  hs-source-dirs: app, src
  main-is: Main.hs
  ghc-options: -Wall
  build-depends:
    base >= 4 && < 5,
    cesk-labo,
    parsec,
    containers,
test-suite test
  type: exitcode-stdio-1.0
  main-is: ParseTest.hs
  hs-source-dirs: src, test
  build-depends:
    base,
    parsec,
    HUnit,
  other-modules:
    Format,
    Primitive,
    Expression,
    Parse,
-- executable cesk-labo
--   import: warnings
--   main-is: Main.hs
--   build-depends:
--     base >= 4 && < 5,
--     parsec,
--     containers,
--   other-modules:
--     Data,
--     Environment,
--     Expression,
--     Format,
--     Interprete,
--     Parse,
--     Primitive,
--     State,
--     System,
--   hs-source-dirs: src
