cabal-version: 3.6
name: cesk-labo
version: 0.1.0.0
homepage: https://github/lachrist/cesk-labo
license: MIT
license-file: LICENSE
author: Laurent Christophe
maintainer: laurent.christophe.terken@gmail.com
common basic
  ghc-options: -Wall
  other-modules:
    Continuation,
    Data,
    Environment,
    Error,
    Evaluate,
    Expression,
    Format,
    Parse,
    Primitive,
    State,
    Storage,
    Weave,
library
  import: basic
  hs-source-dirs: src
  build-depends:
    base,
    parsec,
    containers,
executable cesk-labo
  import: basic
  hs-source-dirs: app, src
  main-is: Main.hs
  build-depends:
    base,
    cesk-labo,
    parsec,
    containers,
test-suite test
  import: basic
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: src, test
  build-depends:
    base,
    cesk-labo,
    parsec,
    HUnit,
    containers,
  other-modules:
    EvaluateTest,
    ParseTest,

