cabal-version: 3.6
name: cesk-labo
version: 0.1.0.0
homepage: https://github/lachrist/cesk-labo
license: MIT
license-file: LICENSE
author: Laurent Christophe
maintainer: laurent.christophe.terken@gmail.com
library
  ghc-options: -Wall
  hs-source-dirs: src
  exposed-modules: CeskLabo
  build-depends:
    base,
    parsec,
    containers,
  other-modules:
    Continuation,
    Data,
    Environment,
    Error,
    Evaluate,
    Expression,
    Formatable,
    Parse,
    Primitive,
    State,
    Storage,
    Weave,
executable cesk-labo
  ghc-options: -Wall
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    base,
    cesk-labo,
    parsec,
    containers,
test-suite test
  ghc-options: -Wall
  hs-source-dirs: test
  main-is: Test.hs
  type: exitcode-stdio-1.0
  build-depends:
    base,
    cesk-labo,
    parsec,
    HUnit,
    containers,

